--- a/client/client/scripts/filter/locales/en.json
+++ b/client/client/scripts/filter/locales/en.json
@@ -63,6 +63,8 @@
 
   "FILTER_FORM_PERMISSIONS":
                         "Permissions",
+  "FILTER_FORM_PERMISSIONS_GLOBAL":
+                        "Accessible by all users",
   "FILTER_FORM_PERMISSIONS_LOADING_FAILURE":
                         "Loading the permissions finished with failures. Try to refresh the page to try again.",
   "FILTER_FORM_PERMISSIONS_HINT":
