feat(variables): add checkbox for undefined variables in filter dialog
Related to: CAM-3058

--- a/client/client/scripts/filter/locales/en.json
+++ b/client/client/scripts/filter/locales/en.json
@@ -92,6 +92,8 @@
 
   "FILTER_FORM_VARIABLES":
                         "Variables",
+  "FILTER_FORM_VARIABLES_SHOW_UNDEFINED":
+                        "Show undefined variables",
   "FILTER_FORM_VARIABLES_HINT":
                         "You can define variables shown in the tasks list.",
   "FILTER_VARIABLE_NAME":
