feat(variables): display undefined variables when wanted
Related to: CAM-3058

--- a/client/client/scripts/variable/locales/en.json
+++ b/client/client/scripts/variable/locales/en.json
@@ -15,6 +15,8 @@
                     "Show less variables",
   "MORE_VARIABLES":
                     "Show more variables",
+  "UNDEFINED_VARIABLE":
+                    "&lt;Undefined&gt;",
   "TOGGLE":
                     "Toggle",
   "SERIALIZED":
