feat(form): add possibility to load variables in generic forms
related to CAM-3062

--- a/client/client/scripts/form/locales/en.json
+++ b/client/client/scripts/form/locales/en.json
@@ -24,5 +24,11 @@
   "VARIABLE_NAME":
                         "Variable name",
   "VARIABLE_TYPE":
-                        "Variable type"
+                        "Variable type",
+  "LOAD_VARIABLES":
+                        "Load Variables",
+  "LOAD_VARIABLES_FAILURE":
+                        "Could not load variables",
+  "NO_TASK_VARIABLES":
+                        "The task does not contain any variables"
 }
