--- a/client/client/scripts/filter/locales/en.json
+++ b/client/client/scripts/filter/locales/en.json
@@ -118,5 +118,8 @@
                         "Loading the filters finished with failures. Try to refresh the page to try again.",
 
   "INVALID_DATE":
-                        "Invalid date: the date should have the pattern 'yyyy-MM-ddTHH:mm:ss'"
+                        "Invalid date: the date should have the pattern 'yyyy-MM-ddTHH:mm:ss'",
+
+  "REQUIRE_UNIQUE_KEY":
+                        "Key must be unique"
 }
