feat(plugin): add a new plugin point inside navbar
- a new plugin point "tasklist.navbar.action" inside the navbar has added
- "Start process" feature is implemented as plugin which uses the new
  plugin point

related to CAM-3298

--- a/client/client/scripts/locales/en.json
+++ b/client/client/scripts/locales/en.json
@@ -94,5 +94,17 @@
       "dow": 1,
       "doy": 4
     }
-  }
+  },
+
+  "CREATE_TASK" :
+        "Create task",
+
+  "NEW_TASK_NAME" :
+        "Name",
+
+  "NEW_TASK_DESCRIPTION" :
+        "Description",
+
+   "TASK_SAVE_ERROR":
+        "Something went wrong while saving the task"
 }
