chore(plugin): add field for standalone task plugin
related to CAM-3298

--- a/client/client/scripts/locales/en.json
+++ b/client/client/scripts/locales/en.json
@@ -102,6 +102,9 @@
   "NEW_TASK_NAME" :
         "Name",
 
+  "NEW_TASK_ASSIGNEE" :
+        "Assignee",
+
   "NEW_TASK_DESCRIPTION" :
         "Description",
 
