--- a/client/client/scripts/tasklist/locales/en.json
+++ b/client/client/scripts/tasklist/locales/en.json
@@ -28,5 +28,11 @@
   "RESET_PAGE":
                   "Reset page number",
   "TASK_LIST_LOADING_FAILURE":
-                  "Loading the list of tasks finished with failures. Try to refresh the page to try again."
+                  "Loading the list of tasks finished with failures. Try to refresh the page to try again.",
+  "PROCESS_VARIABLE":
+                  "Process Variable",
+  "TASK_VARIABLE":
+                  "Task Variable",
+  "CASE_VARIABLE":
+                  "Case Variable"
 }
