feat(sorting): add ability to sort on multiple fields
related to CAM-3465

--- a/client/client/scripts/tasklist/locales/en.json
+++ b/client/client/scripts/tasklist/locales/en.json
@@ -1,6 +1,10 @@
 {
   "SORT_BY":
                   "Sort by",
+  "ADD_SORT_BY":
+                  "Add sorting",
+  "REMOVE_SORTING":
+                  "Remove sorting",
   "PRIORITY":
                   "Priority",
   "CREATION_DATE":
