feat(tasks): add ability to sort tasks by variables
Related to CAM-3466

--- a/client/client/scripts/tasklist/locales/en.json
+++ b/client/client/scripts/tasklist/locales/en.json
@@ -38,5 +38,11 @@
   "TASK_VARIABLE":
                   "Task Variable",
   "CASE_VARIABLE":
-                  "Case Variable"
+                  "Case Variable",
+  "EXECUTION_VARIABLE":
+                  "Execution Variable",
+  "CASE_EXECUTION_VARIABLE":
+                  "Case Execution Variable",
+  "CASE_INSTANCE_VARIABLE":
+                  "Case Instance Variable"
 }
