impr(filter perm): align the permission addition process
Related to CAM-3733

--- a/client/client/scripts/filter/locales/en.json
+++ b/client/client/scripts/filter/locales/en.json
@@ -61,6 +61,8 @@
   "FILTER_REMOVE_CRITERION":
                         "Remove",
 
+  "ADD_PERMISSION":
+                        "Add perm.",
   "FILTER_FORM_PERMISSIONS":
                         "Permissions",
   "FILTER_FORM_PERMISSIONS_GLOBAL":
