--- a/client/client/scripts/filter/locales/en.json
+++ b/client/client/scripts/filter/locales/en.json
@@ -62,7 +62,7 @@
                         "Remove",
 
   "ADD_PERMISSION":
-                        "Add perm.",
+                        "Add",
   "FILTER_FORM_PERMISSIONS":
                         "Permissions",
   "FILTER_FORM_PERMISSIONS_GLOBAL":
