fix(filter dialog): correct the way permissions are added
Related to CAM-3774

--- a/client/client/scripts/filter/locales/en.json
+++ b/client/client/scripts/filter/locales/en.json
@@ -62,7 +62,7 @@
                         "Remove",
 
   "ADD_PERMISSION":
-                        "Add",
+                        "Add permis.",
   "FILTER_FORM_PERMISSIONS":
                         "Permissions",
   "FILTER_FORM_PERMISSIONS_GLOBAL":
