--- a/client/client/scripts/tasklist/locales/en.json
+++ b/client/client/scripts/tasklist/locales/en.json
@@ -44,5 +44,41 @@
   "CASE_EXECUTION_VARIABLE":
                   "Case Execution Variable",
   "CASE_INSTANCE_VARIABLE":
-                  "Case Instance Variable"
+                  "Case Instance Variable",
+  "PROCESS_INSTANCE_ID":
+                  "Process Instance ID",
+  "PROCESS_INSTANCE_BUSINESS_KEY":
+                  "Process Instance Business Key",
+  "PROCESS_DEFINITION_ID":
+                  "Process Definition ID",
+  "PROCESS_DEFINITION_KEY":
+                  "Process Definition Key",
+  "PROCESS_DEFINITION_NAME":
+                  "Process Definition Name",
+  "EXECUTION_ID":
+                  "Execution ID",
+  "CASE_INSTANCE_ID":
+                  "Case Instance ID",
+  "CASE_INSTANCE_BUSINESS_KEY":
+                  "Case Instance Business Key",
+  "CASE_DEFINITION_ID":
+                  "Case Definition ID",
+  "CASE_DEFINITION_KEY":
+                  "Case Definition Key",
+  "CASE_DEFINITION_NAME":
+                  "Case Definition Name",
+  "CASE_EXECUTION_ID":
+                  "Case Execution ID",
+  "CANDIDATE_GROUP":
+                  "Candidate Group",
+  "CANDIDATE_USER":
+                  "Candidate User",
+  "INVOLVED_USER":
+                  "Involved User",
+  "TASK_DEFINITION_KEY":
+                  "Task Definition Key",
+  "DELEGATION_STATE":
+                  "Delegation State",
+  "LIKE":
+                  "like"
 }
